modernize GateLink for Quarkus 3.33.3 LTS